--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ main {
     align-items: center;
     justify-content: center;
     position: relative;
-    /* animation: FormVisibility 1s; */
+    animation: FormVisibility 1s;
 }
 .poster {
     height: 100%;
@@ -51,11 +51,13 @@ main {
 }
 .poster img {
     height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 .Form {
     width: 50%;
     padding: 0 5%;
-    box-sizing: border-box;
+    box-sizing: border-box; 
 }
 .Form h2 {
     font-size: 1.8rem;
@@ -129,6 +131,10 @@ main {
     font-weight: 500;
     cursor: pointer;
     box-shadow: 0 15px 70px rgba(254, 107, 104, .6);
+    transition: background .3s;
+}
+.signin-btn:hover {
+    background: rgb(235, 98, 96);
 }
 .auth-with {
     color: var(--dark-purple);
@@ -189,10 +195,7 @@ main {
     0% {
         transform: scale(0.8);
     } 
-    75% {
+    70% {
         transform: scale(1.05);
-    }
-    100% {
-        transform: scale(1);
     }
 }
